Add latin option to slugify for lightboxes

--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -160,7 +160,7 @@
             {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
             <td>{{ administration[0].name[page.lang] }}</td>
 
-            <td><a href="#{{ release.name[page.lang] | slugify }}" aria-controls="{{ release.name[page.lang] | slugify }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
+            <td><a href="#{{ release.name[page.lang] | slugify: "latin" }}" aria-controls="{{ release.name[page.lang] | slugify: "latin" }}" class="overlay-lnk" role="button" >{{ release.name[page.lang] }}</a></td>
             <td>
               {{ site.data.i18n.categories[release.category][page.lang] }}
             </td>
@@ -207,7 +207,7 @@
 {%- assign govLevel = govLevels[0] -%}
   {%- for admin in govLevels[1] -%}
     {%- for release in admin[1].releases -%}
-      <section id="{{ release.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
+      <section id="{{ release.name[page.lang] | slugify: "latin" }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
         <header class="modal-header">
           <h2 class="modal-title">{{ release.name[page.lang] }}</h2>
         </header>
