--- a/_includes/standardTable.html
+++ b/_includes/standardTable.html
@@ -61,7 +61,7 @@
       {%- for standards in site.data.standard -%}
         {%- assign standard = standards[1] -%}
         <tr>
-          <td><a href="#{{ standard.name[page.lang] | slugify }}" aria-controls="{{ standard.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ standard.name[page.lang] }}</a></td>
+          <td><a href="#{{ standard.name[page.lang] | slugify: "latin" }}" aria-controls="{{ standard.name[page.lang] | slugify: "latin" }}" class="overlay-lnk" role="button">{{ standard.name[page.lang] }}</a></td>
           <td>{{ standard.description.whatItDoes[page.lang] }}</td>
           <td><a href="{{ standard.specURL[page.lang] }}" target="_blank">{{ standard.standardOrg[page.lang] }}</a></td>
           <td>
@@ -89,7 +89,7 @@
 <!-- Modal Lightboxes -->
 {%- for standards in site.data.standard -%}
   {%- assign standard = standards[1] -%}
-  <section id="{{ standard.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
+  <section id="{{ standard.name[page.lang] | slugify: "latin" }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
     <header class="modal-header">
       <h2 class="modal-title">{{ standard.name[page.lang] }}</h2>
     </header>
