--- a/_includes/standardTable.html
+++ b/_includes/standardTable.html
@@ -94,20 +94,33 @@
       <h2 class="modal-title">{{ standard.name[page.lang] }}</h2>
     </header>
     <div class="modal-body">
-      <p><strong>{{ standard.description.whatItDoes[page.lang] }}</strong></p>
-      <p>{{ site.data.i18n.tables.lightbox.beingUsed[page.lang] }}</p>
+      <p><strong>Description:</strong></p>
+      <p>{{ standard.description.whatItDoes[page.lang] }}</p>
+      <div class="row">
+        <div class="col-md-4"><strong>{{ site.data.i18n.tables.lightbox.beingUsed[page.lang] }}</strong></div>
+        <div class="col-md-2"><strong>{{ site.data.i18n.tables.status[page.lang] }}</strong></div>
+        <div class="col-md-2"><strong>Date</strong></div>
+        <div class="col-md-4"><strong>URL</strong></div>
+      </div>
       {%- for administration in standard.administrations -%}
-          <div class="row">
-            <div class="col-md-7">
-              {%- for levels in site.data.i18n.administrations -%}
-                {%- assign govLevel = levels[0] -%}
-                {%- assign admin = site.data.administrations[govLevel] | where: "code", administration.adminCode -%}
-                <strong>{{ admin[0].name[page.lang] }}</strong>
-              {%- endfor -%}
-            </div>
-            <div class="col-md-5">{{ administration.status }}</div>
+        <div class="row">
+          <div class="col-md-4">
+            {%- for levels in site.data.i18n.administrations -%}
+              {%- assign govLevel = levels[0] -%}
+              {%- assign admin = site.data.administrations[govLevel] | where: "code", administration.adminCode -%}
+              {{ admin[0].name[page.lang] }}
+            {%- endfor -%}
           </div>
-        {%- endfor -%}
+          <div class="col-md-2">{{ administration.status }}</div>
+          <div class="col-md-2">{{ administration.date.created }}</div>
+          <div class="col-md-4">
+          {%- for reference in administration.references -%}
+          <a target="_blank" href="{{ reference.URL[page.lang] }}">{{ reference.name[page.lang] }}</a>
+          {%- endfor -%}
+          {{ administration.references.URL[page.lang] }}
+          </div>
+        </div>
+      {%- endfor -%}
     </div>
   </section>
 {%- endfor -%}
