Updates to documentation and open design

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,8 @@
       <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
       <ul role="menu" aria-orientation="vertical">
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.code.link[page.lang] }}">{{ site.data.i18n.general.nav.code[page.lang] }}</a></li>
+        <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.design.link[page.lang] }}">{{ site.data.i18n.general.nav.design[page.lang] }}</a></li>
+        <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.research.link[page.lang] }}">{{ site.data.i18n.general.nav.research[page.lang] }}</a></li>
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.software.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a></li>
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a></li>
         <li role="presentation"><a role="menuitem" href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}">{{ site.data.i18n.general.nav.partnership[page.lang] }}</a></li>
