Update open research

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,6 +77,10 @@
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/designForm.js"></script>
 {%- endif %}
+{%- if page.ref == "researchForm" -%}
+<script src="../assets/js/src/adminForm.js"></script>
+<script src="../assets/js/src/researchForm.js"></script>
+{%- endif %}
 {%- if page.ref == "partnershipForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/partners.js"></script>
