--- a/_includes/form/presets/selectResearch.html
+++ b/_includes/form/presets/selectResearch.html
@@ -1,21 +1,20 @@
-{%- assign title = "standardAcronym" -%}
+{%- assign title = "name" -%}
 {%- assign group = "select" -%}
-{%- assign standard_arr = "" | split: ',' -%}
-{%- for standard in site.data.standard -%}
-    {%- assign standard_arr = standard_arr | push: standard[1].standardAcronym -%}
+{%- assign research_arr = "" | split: ',' -%}
+{%- for research in site.data.research -%}
+    {%- assign research_arr = research_arr | push: research[1].name[page.lang] -%}
 {%- endfor %}
-{%- assign standard_arr = standard_arr | sort_natural -%}
+{%- assign research_arr = research_arr | sort_natural -%}
 <div class="form-group">
   {% include form/components/label-group.html id=include.id title=title group=group param=site.data.forms.param.required_false %}
   <select class="form-control" id="{{ title }}{{ group }}" name="{{ title }}{{ group }}">
-    <option value="">&nbsp;</option>
-    {%- for standard in standard_arr -%}
-    <option value="{{ standard | slugify }}">{{ standard }}</option>
+    <option value=""></option>
+    {%- for research in research_arr -%}
+    <option value="{{ research | slugify }}">{{ research }}</option>
     {%- endfor %}
   </select>
 </div>
 
-{% include form/components/group.html id=include.id title=title -%}
 
 {%- include form/presets/name.html id=include.id -%}
 
