--- a/_includes/form/presets/partners.html
+++ b/_includes/form/presets/partners.html
@@ -5,16 +5,20 @@
     <div class="form-group" style="margin-bottom: 0;">
       <label for="{{ title }}"><span class="field-name">{{ site.data.i18n.form[include.idPreset][title].label[page.lang] }}</span></label>
     </div>
-    <div class="form-group" style="display: flex;">
+    <div class = "form-group">
+      <div class="form-group" style="display: flex;">
         <div class="{{ title }}AdminCodeSelect more-group-id-replace">{% include form/components/admin/select.html param=site.data.forms.param.required_false %}</div>
         <div class="{{ title }}AdminCodeBtn more-group-id-replace">{% include form/components/admin/btn.html btn=title idPreset=include.idPreset %}</div>
-        <div class="{{ title }}AdminCodeRemove more-group-id-replace"><button type="button" class="btn btn-default mrgn-lft-md" id="cancelAdminButton{{ title }}" style="display: none;"><i class="glyphicon glyphicon-remove"></i></button></div>
+      </div>
+      <div class="well hide" style="position:relative;" id="{{ title }}NewAdmin">
+        <div class="{{ title }}AdminCodeRemove more-group-id-replace"><button type="button" class="btn btn-default remove" id="cancelAdminButton{{ title }}" style="position:absolute; top: 10px; right: 10px;"><i class="glyphicon glyphicon-remove"></i></button></div>
+        <div class="orgLevelPartner">{% include form/components/admin/orgLevel.html idPreset=include.idPreset title="orgLevelPartner" all=true %}</div>
+        {% include form/components/admin/provinceSelect.html btn=title idPreset=include.idPreset title="provinceSelectPartner" %}
+        {% include form/components/group-i18n-group.html id=include.idPreset title=title group="name" %}
+        <div id="partnersNewAdminSeparator"><hr></div>
+        {% include form/components/group-group.html id=include.idPreset title=title group="contactname" param=site.data.forms.param.partners.name %}
+        {% include form/components/group-group.html id=include.idPreset title=title group="contactemail" param=site.data.forms.param.partners.email %}
+      </div>
     </div>
-    <div class="orgLevelPartner">{% include form/components/admin/orgLevel.html idPreset=include.idPreset title="orgLevelPartner" all=true %}</div>
-    {% include form/components/admin/provinceSelect.html btn=title idPreset=include.idPreset title="provinceSelectPartner" %}
-    {% include form/components/group-i18n-group.html id=include.idPreset title=title group="name" %}
-    <div class="more-group-id-replace"><div id="partnersNewAdminSeparator"><hr></div></div>
-    {% include form/components/group-group.html id=include.idPreset title=title group="contactname" param=site.data.forms.param.partners.name %}
-    {% include form/components/group-group.html id=include.idPreset title=title group="contactemail" param=site.data.forms.param.partners.email %}
   </div>
 </div>
