--- a/_includes/schema/presets/selectResearch.html
+++ b/_includes/schema/presets/selectResearch.html
@@ -1,1 +1,2 @@
+{% include schema/widgets/string.html id=include.id title="researchAcronym" -%}
 {%- include schema/widgets/string-i18n.html id=include.id title="name" -%}
