--- a/_includes/statsDashboard.html
+++ b/_includes/statsDashboard.html
@@ -33,3 +33,67 @@
 </div>
 
 <div class="clear"></div>
+
+<h2>{{ site.data.i18n.general.stats.software[page.lang] }}</h2>
+<div id="chartContainer_software">
+
+
+  {% comment %} ===Build View of Administrations=== {% endcomment %}
+
+  {%- assign governanceString = "" -%}
+  {%- for adminData in site.data.administrations -%}
+
+    {%- assign adminString = "" -%}
+    {%- assign govLevel = adminData[0] -%}
+    
+    {%- for gov in adminData[1] -%} 
+
+      {%- assign counter = 0 -%}
+      {%- assign govcode = gov.code -%}
+
+      {%- for softwares in site.data.software -%}
+        {%- assign software = softwares[1] -%}
+        {%- for administration in software.administrations -%}
+              {%- if administration.adminCode == govcode -%}
+                {%- assign counter = counter | plus: 1  -%}
+              {%- endif -%}
+        {% endfor %}
+      {%- endfor -%}
+
+      {%- if counter != 0 -%}
+        {%- assign adminString = adminString | append: gov.code | append: ":" | append: counter | append: "," -%}
+      {%- endif -%}
+
+    {%- endfor -%}
+
+    {%- assign adminValues = adminString | split: "," -%}
+
+    {%- if adminValues.size != 0 -%}
+    <h3>{{ site.data.i18n.administrations[govLevel][page.lang] }}</h3>
+    <!-- Data Table -->
+    <div>
+
+    <table class="wb-tables table table-striped table-hover wb-charts wb-charts-bar" id="dataset-filter-s{{govLevel}}" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [4,6,7], "visible": false}], "paging": true}'>
+      <thead>
+        <tr>
+          <th>{{ site.data.i18n.tables.administration[page.lang] }}</th>
+          <th>#</th>
+        </tr>
+      </thead>
+      <tbody>
+        {%- for av in adminValues -%}
+          {%- assign ev = av | split: ":" -%}
+          {%- assign administration = site.data.administrations[govLevel] | where: "code", ev[0] -%}
+          <tr>
+            <th>{{ administration[0].name[page.lang] }}</th>
+            <td>{{ev[1]}}</td>
+          </tr>
+        {%- endfor -%}
+      </tbody>
+    </table>
+    {%- endif -%}
+    
+    </div>
+  {%- endfor -%}
+
+  {% comment %} ===Build Array of Administrations=== {% endcomment %}
