--- a/_includes/form/presets/uses.html
+++ b/_includes/form/presets/uses.html
@@ -2,15 +2,21 @@
 <div class="add-more-group" id="addMore{{ title }}" data-title="{{ title }}">
 {% include form/components/title.html id=include.idPreset title=title -%}
 <div class="add-more-content">
-<div class="form-group">
-    {% include form/components/label-group.html id=include.idPreset title=title group="spdxID" %}
-    <select class="form-control" id="{{ title }}spdxID" name="{{ title }}spdxID" required="required">
-      <option value="">&nbsp;</option>
-      {%- for licence in site.data.i18n.licences -%}
-      <option value="{{ licence[1].value }}">{{ licence[1].value }}</option>
-      {%- endfor %}
-    </select>
-  </div>
-{% include form/components/group-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.licences -%}
+  <p>testing</p>
+  
+  {%- include form/widgets/string-i18n.html 
+    id=include.idPreset 
+    title="team" 
+    param=site.data.forms.param.team 
+    -%}
+  {%- include form/presets/contact.html 
+    idPreset=include.idPreset 
+    title="contact" 
+    -%}
+  {%- include form/widgets/string.html 
+    id=include.idPreset 
+    title="date" 
+    param=site.data.forms.param.date 
+    -%}
 </div>
 </div>
