--- a/_includes/partnershipTable.html
+++ b/_includes/partnershipTable.html
@@ -17,17 +17,19 @@
 
       <div class="form-group">
         <label for="dt_department">{{ site.data.i18n.tables.administrations[page.lang] }}</label>
-        <select class="form-control" id="dt_department" name="dt_department" data-column="0">
+        <select class="form-control" id="dt_department" name="dt_department" data-column="8">
           <option value="">&nbsp;</option>
           {%- assign admin_arr = "" | split: ',' -%}
           {%- for govLevels in site.data.partnership -%}
             {%- assign govLevel = govLevels[0] -%}
             {% for admin in govLevels[1] %}
-              {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[0] -%}
-              {%- assign admin_arr = admin_arr | push: administration[0].name[page.lang] -%}
+              {%- assign partnership = admin[1] -%}
+              {%- assign administration = site.data.administrations[govLevel] | where: "code", partnership.adminCode -%}
+              {%- if administration[0].name[page.lang] != nil -%}
+                {%- assign admin_arr = admin_arr | push: administration[0].name[page.lang] -%}
+              {%- endif -%}
             {% endfor %}
           {%- endfor -%}
-          {%- assign admin_arr = admin_arr | sort -%}
           {%- for admin in admin_arr -%}
             <option value="{{ admin }}">{{ admin }}</option>
           {%- endfor -%}
@@ -41,13 +43,12 @@
           {%- assign team_arr = "" | split: ',' -%}
           {%- for govLevels in site.data.partnership -%}
             {%- for admin in govLevels[1] -%}
-              {%- for project in admin[1].projects -%}
-                {%- if project.team[page.lang] != nil -%}
-                  {%- assign team_arr = team_arr | push: project.team[page.lang] -%}
+              {%- assign partnership = admin[1] -%}
+                {%- if partnership.team[page.lang] != nil -%}
+                  {%- assign team_arr = team_arr | push: partnership.team[page.lang] -%}
                 {%- endif -%}
               {%- endfor -%}
             {%- endfor -%}
-          {%- endfor -%}
           {%- assign team_arr = team_arr | group_by: "" | sort: "name" -%}
           {%- for team in team_arr -%}
             <option value="{{ team.name }}">{{ team.name }}</option>
@@ -62,12 +63,11 @@
           {%- assign cat_arr = "" | split: ',' -%}
           {%- for govLevels in site.data.partnership -%}
             {%- for admin in govLevels[1] -%}
-              {%- for project in admin[1].projects -%}
-                {%- if project.category != nil -%}
-                  {%- assign cat_arr = cat_arr | push: project.category -%}
+              {%- assign partnership = admin[1]-%}
+                {%- if partnership.category != nil -%}
+                  {%- assign cat_arr = cat_arr | push: partnership.category -%}
                 {%- endif -%}
               {%- endfor -%}
-            {%- endfor -%}
           {%- endfor -%}
           {%- assign cat_arr = cat_arr | uniq -%}
           {%- for cat in cat_arr -%}
@@ -78,17 +78,16 @@
 
       <div class="form-group">
         <label for="dt_tag">{{ site.data.i18n.tables.tag[page.lang] }}</label>
-        <select class="form-control" id="dt_tag" name="dt_tag" data-column="5">
+        <select class="form-control" id="dt_tag" name="dt_tag" data-column="6">
           <option value="">&nbsp;</option>
           {%- assign tag_arr = "" | split: ',' -%}
           {%- for govLevels in site.data.partnership -%}
             {%- for admin in govLevels[1] -%}
-              {%- for project in admin[1].projects -%}
-                {%- for tag in project.tags[page.lang] -%}
+              {%- assign partnership = admin[1] -%}
+                {%- for tag in partnership.tags[page.lang] -%}
                   {%- assign tag_arr = tag_arr | push: tag -%}
                 {%- endfor -%}
               {%- endfor -%}
-            {%- endfor -%}
           {%- endfor -%}
           {%- assign tag_arr = tag_arr | group_by: "" | sort: "name" -%}
           {%- for tag in tag_arr -%}
@@ -122,6 +121,8 @@
         <th>{{ site.data.i18n.tables.team[page.lang] }}</th>
         <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
         <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.administration[page.lang] }}</th>
+      
       </tr>
     </thead>
     <tbody>
@@ -140,7 +141,10 @@
             {{ tag }}&nbsp;
           {%- endfor -%}
         </td>
+        {%- assign govLevel = govLevels[0] -%}
         <td>{{ site.data.i18n.administrations[govLevel].value }}</td>
+        {%- assign administration = site.data.administrations[govLevel] | where: "code", partnership.adminCode -%}    
+        <td>  {{ administration[0].name[page.lang] }}</td>
       </tr>
         {%- endfor -%}
       {%- endfor -%}
@@ -165,7 +169,7 @@
         <li>{{ tag }}</li>
         &nbsp; {%- endfor -%}
       </ul>  
-      {%- assign administration = site.data.administrations[govLevel] | where: "code", admin[1].adminCode -%}
+      {%- assign administration = site.data.administrations[govLevel] | where: "code", partnership.adminCode -%}
       <p><strong>{{ site.data.i18n.tables.administration[page.lang] }}:</strong> {{ administration[0].name[page.lang] }}</p>
       <p><strong> Contact:</strong> <a href="mailto:{{ partnership.contact.email }}" target="_blank">{{ partnership.contact.email }}</a></p>
       <p><strong> {{ site.data.i18n.tables.partnership.searchPeriod.title[page.lang] }}</strong></p>
