--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,6 +57,7 @@
 <script src="../assets/js/src/more-group.js"></script>
 <script src="../assets/js/src/date.js"></script>
 <script src="../assets/js/src/slugify.js"></script>
+<script src="../assets/js/src/licences.js"></script>
 {%- if page.ref == "adminForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 {%- endif -%}
