--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,6 +73,10 @@
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/softwareForm.js"></script>
 {%- endif %}
+{%- if page.ref == "researchForm" -%}
+<script src="../assets/js/src/adminForm.js"></script>
+<script src="../assets/js/src/researchForm.js"></script>
+{%- endif %}
 {%- if page.ref == "partnershipForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/partners.js"></script>
