--- a/_includes/form/presets/licences.html
+++ b/_includes/form/presets/licences.html
@@ -6,8 +6,8 @@
     {% include form/components/label-group.html id=include.idPreset title=title group="spdxID" %}
     <select class="form-control" id="{{ title }}spdxID" name="{{ title }}spdxID" required="required">
       <option value="">&nbsp;</option>
-      {%- for licence in site.data.i18n.licences -%}
-      <option value="{{ licence[1].value }}">{{ licence[1].value }}</option>
+      {%- for licence in site.data.spdx.json.licenses.licenses -%}
+      <option value="{{ licence.licenseId }}">{{ licence.licenseId }}</option>
       {%- endfor %}
     </select>
   </div>
