--- a/_includes/schema/presets/uses.html
+++ b/_includes/schema/presets/uses.html
@@ -1,11 +1,11 @@
-{%- assign title = "licences" -%}
+{%- assign title = "uses" -%}
 <li>
   <details open>
     <summary>{{ title }} {% include schema/components/required.html %} [array]</summary>
     <p>{{ site.data.i18n.form[include.idPreset][title].title[page.lang] }}</p>
     <ul class="list-unstyled">
-      {%- include schema/components/li-i18n-group.html id=include.idPreset title=title group="URL" -%}
-      {%- include schema/components/li-group.html id=include.idPreset title=title group="spdxID" -%}
+      {%- include schema/widgets/string-i18n.html id=include.idPreset title="team" param=site.data.forms.param.team -%}
+      {%- include schema/presets/contact.html idPreset=include.idPreset param=site.data.forms.param.contact title=title group="spdxID" -%}
     </ul>
   </details>
 </li>
